[package]
name = "ircfox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
liso = "1.2.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
vinezombie = { version = "0.3.1", features = ["tls", "tokio", "client"] }
